--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>title here</title>
-    <link rel="stylesheet" href="<%= STATIC_PATH %>/css/style.css">
+    <title><%= title %></title>
+    <link rel="stylesheet" href=<%= stylePath %> />
   </head>
   <body>
     <h1>Hello from EJS!</h1>
