--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Hello from EJS!</h1>
+    <a href='/about'>about</a>
+    <a href='/services'>services</a>
+    <a href='/events'>events</a>
+    <a href='/scheduling'>scheduling</a>
+    <a href='/contact'>contact</a>
     <script src=<%= scriptSource %>></script>
   </body>
 </html>
