Update views to show what view they are on

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
     <a href='/events'>events</a>
     <a href='/scheduling'>scheduling</a>
     <a href='/contact'>contact</a>
+    <h2><%= title %></h2>
     <script src=<%= scriptSource %>></script>
   </body>
 </html>
