--- a/views/events.ejs
+++ b/views/events.ejs
@@ -7,6 +7,7 @@
   <body>
     <h1>Hello from EJS!</h1>
     <a href='/'>Home</a>
+    <h2><%= title %></h2>
     <script src=<%= scriptSource %>></script>
   </body>
 </html>
