--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href=<%= stylePath %> />
   </head>
   <body>
-    <h1>Hello from EJS!</h1>
+    <h1>Hello from EJS!!!</h1>
     <a href='/about'>about</a>
     <a href='/services'>services</a>
     <a href='/events'>events</a>
